Fix post processing title

--- a/app/javascript/components/i18n/en.json
+++ b/app/javascript/components/i18n/en.json
@@ -15,7 +15,7 @@
     "component.languages_site.title": "Languages",
     "component.tags_site.title": "Tags",
     "component.activity_site.title": "Activity",
-    "component.post_processing_site.title": "Activity",
+    "component.post_processing_site.title": "Post Processing",
     "component.users_site.title": "Users",
     "component.integrations_site.title": "Integrations",
     "component.over_the_air_site.title": "Over the Air"
