--- a/spec/fixtures/stringsdict/example.stringsdict
+++ b/spec/fixtures/stringsdict/example.stringsdict
@@ -18,5 +18,29 @@
                 <string>%d homes found</string>
             </dict>
         </dict>
+        <key>second_key</key>
+        <dict>
+            <key>NSStringLocalizedFormatKey</key>
+            <string>%#@value@</string>
+            <key>value</key>
+            <dict>
+                <key>NSStringFormatSpecTypeKey</key>
+                <string>NSStringPluralRuleType</string>
+                <key>NSStringFormatValueTypeKey</key>
+                <string>d</string>
+                <key>zero</key>
+                <string>zero values found</string>
+                <key>one</key>
+                <string>one value found</string>
+                <key>two</key>
+                <string>two values found</string>
+                <key>few</key>
+                <string>few values found</string>
+                <key>many</key>
+                <string>many values found</string>
+                <key>other</key>
+                <string>other values found</string>
+            </dict>
+        </dict>
     </dict>
 </plist>
